--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>MovieBuff</title>
+    <title>Netflix</title>
   </head>
   <body>
     <div id="root"></div>
