--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><title>Netflix</title></head><body> <div id="root"></div> <link rel="stylesheet" href="/MovieBuff.76705c05.css"> <script type="module" src="/MovieBuff.2295985d.js"></script> </body></html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Netflix</title></head><body> <div id="root"></div> <link rel="stylesheet" href="/MovieBuff.4036f942.css"> <script type="module" src="/MovieBuff.f5b3abb6.js"></script> </body></html>
